# mcap

./: cspell.config.yaml
.github/workflows/: ci.yml
cpp/examples/: CMakeLists.txt
cpp/examples/jsonschema/: writer.cpp
cpp/examples/protobuf/: CMakeLists.txt  writer.cpp
cpp/mcap/include/mcap/: reader.hpp
cpp/test/: CMakeLists.txt
docs/home/: data-serialization-formats.md
